--- a/mks-sistemas-challenge/src/styles/globals.css
+++ b/mks-sistemas-challenge/src/styles/globals.css
@@ -18,6 +18,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+ul {
+  list-style: none;
+}
+
 a {
   color: inherit;
   text-decoration: none;
